| Summary: | ASTERISK-30336: sig_analog: Fix no timeout duration | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-12-01 05:51:59.000-0600 | Date Closed: | 2022-12-08 10:12:20.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 20.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | ASTERISK-28702 made a fix for the no timeout duration. However, it did this in chan_dahdi's ss_thread, which is basically dead code. This should have been done in sig_analog instead, and this does that. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-12-01 05:52:00.357-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-12-08 10:12:21.572-0600 Change 19597 merged by Friendly Automation: sig_analog: Fix no timeout duration. [https://gerrit.asterisk.org/c/asterisk/+/19597|https://gerrit.asterisk.org/c/asterisk/+/19597] By: Friendly Automation (friendly-automation) 2022-12-08 10:13:54.319-0600 Change 19598 merged by Friendly Automation: sig_analog: Fix no timeout duration. [https://gerrit.asterisk.org/c/asterisk/+/19598|https://gerrit.asterisk.org/c/asterisk/+/19598] By: Friendly Automation (friendly-automation) 2022-12-08 10:17:34.912-0600 Change 19613 merged by Joshua Colp: sig_analog: Fix no timeout duration. [https://gerrit.asterisk.org/c/asterisk/+/19613|https://gerrit.asterisk.org/c/asterisk/+/19613] | ||